# memes

./: .gitignore
boot_status_detector/: CMakeLists.txt  main.cpp
